TAG: uniprotload-tr11937-1
DATE: 12/28/2015
STAFF: sc
CHANGES: US134 - add core components for uniprot override load
1) new script stubs: overrideQC.py overrideQC.sh publishOverride runOverrideQC
2) new config: overrideload.config.default
3) index.html - added override load section
4) Install - added install for override load

TAG: uniprotload-tr11937-BP
DATE: 12/22/2015
STAFF: sc
CHANGES: Branch point tag

TAG: uniprotload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) uniprotload.config.default: Don't mail curator log to mgiadmin

TAG: uniprotload-tr12070-BP
DATE: 11/02/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/uberon
2) this branch will not be used

TAG: uniprotload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: uniprotload-tr11750-MP
DATE: 07/04/2015
STAFF: lec
CHANGES:
1) merge branch point tag for TR11750/postgres conversion

TAG: uniprotload-tr11750-BP
DATE: 06/03/2015
STAFF: lec
CHANGES:
1) branch point tag for TR11750/postgres conversion

TAG: uniprotload-5-2-0-1
DATE: 10/20/2014
STAFF: lec
CHANGES:
1) TR11817/UniProtParser.py/DE changes

TAG: uniprotload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: uniprotload-5-1-1-3
DATE: 12/27/2012
STAFF: lec
CHANGES:
1) TR11221/add EMBL to files/bucketization

TAG: uniprotload-5-1-1-2
DATE: 12/20/2012
STAFF: lec
CHANGES:
1) TR11221/add EMBL to files/bucketization

TAG: uniprotload-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES:
1) Config changes for TR11163

TAG: uniprotload-5-0-0-5
DATE: 06/06/2012
STAFF: lec
CHANGES:
1) TR11071; replace search by UniProt Name with search by UniProt EMBL ID
UNIPROT_SP_ASSOC_MGI_FILE

TAG: uniprotload-5-0-0-4
DATE: 05/15/2012
STAFF: lec
CHANGES:
1) TR11071
UNIPROT_SP_ASSOC_MGI_FILE

TAG: uniprotload-5-0-0-3
DATE: 05/09/2012
STAFF: lec
CHANGES:
1) TR11054
UNIPROT_ACC_ASSOC_ERR_FILE file
UNIPROT_SP_ASSOC_ERR_FILE
UNIPROT_TR_ASSOC_ERR_FILE